# Pre-trained

./: .dockerignore  .env.example  .gitignore  ENVIRONMENT.md  Makefile  README.md  docker-compose.yml  example_gpt_integration.py  example_httpx_client.py  pyproject.toml  run_api.py  test_celery_connection.py  test_client.py  test_gpt_sync.py  test_gpt_task.py
docs/: DATABASE_SETUP.md  DEPLOY.md
script/: celery-flower.service  gpt_worker.service  gpu_server.service  ocr_worker.service  vllm_ocr_worker.service
src/: __init__.py
src/gpt_oss/: __init__.py  gpt_oss_service.py
src/gpu_server/: api.py  celery_app.py  database.py  schemas.py  tasks.py
src/gpu_server/celery_app/: __init__.py  celery_app.py  gpt_tasks.py  logging_config.py  ocr_tasks.py  tasks.py  vllm_ocr_tasks.py
src/gpu_server/router/: __init__.py  deepseek_ocr_router.py  gpt_router.py
src/gpu_server/scipt/: init_database.py
src/ocr/: deepseek_ocr.py  deepseek_ocr_service.py  temo.py  usage.py
src/vllm/: celery_app.py  deepseek_ocr_vllm_service.py  ocr.py  tasks.py
test/: __init__.py  test_vllm_ocr_service.py  test_vllm_ocr_task.py
test/api/: temp.py  test_gpt_api.py  test_ocr_url.py
test/util/: curl_helper.py  test_path.py
