[project]
name = "gpu-server"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"

# Base dependencies only — minimal runtime
dependencies = [

]

# Optional dependency groups
[project.optional-dependencies]
api = [
    "fastapi>=0.128.0",
    "celery>=5.6.2",
    "uvicorn>=0.40.0",
]
