[project]
name = "gpu-server"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"

# Base dependencies only — minimal runtime
dependencies = [
    "kernels>=0.11.7",
    "pydantic>=2.12.5",
]

# Optional dependency groups
[project.optional-dependencies]
api = [
    "fastapi>=0.128.0",
    "celery>=5.6.2",
    "uvicorn>=0.40.0",
    "python-multipart>=0.0.9",
    "kombu>=5.4.0",
    "sqlalchemy>=2.0.0",
    "psycopg2-binary>=2.9.0",
    "alembic>=1.13.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "uvicorn>=0.40.0",
]
deepseek = [
    "addict>=2.4.0",
    "easydict>=1.13",
    "einops>=0.8.1",
    "matplotlib>=3.10.8",
    "torch>=2.9.1",
    "torchvision>=0.24.1",
]

gpt-oss = [
        "torch>=2.9.1",
    "transformers>=4.57.3",
        "accelerate>=1.12.0",

]
